# DreamCue

./: .gitignore  Cargo.toml  README.md  database.rules.json  maestro-smoke.yaml
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
crates/dreamcue-android-ffi/: Cargo.toml
crates/dreamcue-android-ffi/src/: lib.rs
crates/dreamcue-core/: Cargo.toml
crates/memo-android-ffi/: Cargo.toml
crates/memo-core/: Cargo.toml
docs/: architecture.md  release.md
docs/play/: data-safety.md  privacy-policy.html  privacy-policy.md  release-checklist.md  store-listing.md  store-listing.zh-CN.md
docs/releases/: v1.1.0.md  v1.2.0.md  v1.2.10.md  v1.2.11.md  v1.2.6.md  v1.2.7.md  v1.2.8.md  v1.2.9.md
macos/DreamCueMac/: ContentView.swift  CueDragPresentation.swift  DreamCueMacApp.swift  FirebaseConfig.plist  FirebaseRestSyncService.swift  FirebaseSyncSessionStore.swift  Memo.swift  MemoStore.swift  ReminderNotificationPlan.swift  ReturnKeyCommitPolicy.swift  SyncMergePolicy.swift  TimeOfDayGreeting.swift
macos/DreamCueMac.xcodeproj/: project.pbxproj
macos/DreamCueMacUITests/: DreamCueMacUITests.swift
macos/tests/: CueDragPresentationTests.swift  FirebasePayloadTests.swift  FirebaseSessionPersistenceTests.swift  MemoSyncMergePolicyTests.swift  ReminderNotificationPlanTests.swift  ReturnKeyCommitPolicyTests.swift  SyncAccountPolicyTests.swift  TimeOfDayGreetingTests.swift
scripts/: build-macos-release.sh  build-rust-android.sh  verify-dreamcue-naming.sh
(+58 files in other folders)
