[workspace]
members = [
  "crates/dreamcue-core",
  "crates/dreamcue-android-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["DreamCue"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
jni = "0.21"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
