[package]
name = "dreamcue-android-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
jni.workspace = true
dreamcue-core = { path = "../dreamcue-core" }
serde.workspace = true
serde_json.workspace = true
